--- a/pom.xml
+++ b/pom.xml
@@ -2,27 +2,24 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.stutiguias</groupId>
   <artifactId>YAPS</artifactId>
-  <version>0.3</version>
+  <version>0.5</version>
   <name>YAPS</name>
   <description>YAPS</description>
   
   <repositories>
     <!-- Bukkit -->
     <repository>
-      <id>bukkit-repo</id>
-      <url>http://repo.bukkit.org/content/groups/public/</url>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
 
   </repositories>
   
     <dependencies>
-		
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>LATEST</version>
-            <type>jar</type>
-            <scope>compile</scope>
+            <version>1.8.5-R0.1-SNAPSHOT</version>
         </dependency>
         
         <dependency>
